BUGFIX - Ajout de la balise word-wrap en break-word à l'ensemble du projet

--- a/src/styles/components/modern-design/nav/style.css
+++ b/src/styles/components/modern-design/nav/style.css
@@ -334,13 +334,6 @@ nav::before,
     margin-bottom: 0;
 }
 
-.sub-dropdown-item span,
-.sub-dropdown-item a {
-    white-space: normal;
-    word-wrap: break-word;
-    display: inline-block;
-}
-
 .sub-dropdown-item:hover::before,
 .dropdown-content .dropdown-item:hover::before {
     opacity: 1;
